<resources>
    <string name="app_name" translatable="false">핀메뉴 관리 (태블릿 PC)</string>
    <string name="pinmenu_er">핀메뉴 관리</string>
    <string name="pinmenu_ee">핀메뉴 주문</string>
    <string name="login">로그인</string>
    <string name="id">아이디</string>
    <string name="logout">로그아웃</string>
    <string name="password">비밀번호</string>
    <string name="set_password">비밀번호 설정</string>
    <string name="signup">회원가입</string>
    <string name="find_pwd">비밀번호 찾기</string>
    <string name="drop">탈퇴</string>
    <string name="won">원</string>
    <string name="gea" translatable="false">개</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="total">총</string>
    <string name="delete_order">주문삭제</string>
    <string name="total_gea">총 %d개</string>
    <string name="tableno">테이블 번호</string>
    <string name="tablepass">테이블 비밀번호</string>
    <string name="tableNo.">Table No.</string>
    <string name="set_tableno">테이블 이동</string>
    <string name="sel_tableno">테이블번호 선택</string>
    <string name="essential">필수</string>
    <string name="optional">선택</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="delete">삭제</string>
    <string name="update">수정</string>
    <string name="sequence">순서</string>
    <string name="order">주문</string>
    <string name="call">호출</string>
    <string name="pos">포스</string>
    <string name="complete">완료</string>
    <string name="setting">설정</string>
    <string name="btn_login">로&#160;그&#160;인</string>
    <string name="btn_confirm">확&#160;&#160;인</string>
    <string name="btn_cancel">취&#160;&#160;소</string>
    <string name="btn_save">저&#160;&#160;장</string>
    <string name="btn_save2">저&#160;장</string>
    <string name="btn_delete">삭&#160;&#160;제</string>
    <string name="btn_update">수&#160;&#160;정</string>
    <string name="btn_update2">수&#160;정</string>
    <string name="btn_sequence">순&#160;&#160;서</string>
    <string name="btn_sequence2">순&#160;서</string>
    <string name="btn_call">호&#160;&#160;출</string>
    <string name="btn_call2">호&#160;출</string>
    <string name="btn_complete">완&#160;&#160;료</string>
    <string name="btn_move">이&#160;&#160;동</string>
    <string name="btn_drop">탈&#160;&#160;퇴</string>
    <string name="btn_select">선&#160;&#160;택</string>
    <string name="btn_change">변&#160;&#160;경</string>
    <string name="btn_payment">결&#160;&#160;제</string>
    <string name="btn_clear">초&#160;기&#160;화</string>
    <string name="btn_close">닫&#160;&#160;기</string>
    <string name="btn_not_today">오늘 그만 보기</string>
    <string name="udt_info">정보변경</string>
    <string name="date">날짜</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="tilde">~</string>
    <string name="colon">:</string>
    <string name="zero">0</string>
    <string name="zero2">00</string>
    <string name="min">분</string>
    <string name="zeroClock"><font color="#B4B4B4">00</font>:<font color="#B4B4B4">00</font></string>
    <string name="monday">월요일</string>
    <string name="tuesday">화요일</string>
    <string name="wednesday">수요일</string>
    <string name="thursday">목요일</string>
    <string name="friday">금요일</string>
    <string name="saturday">토요일</string>
    <string name="sunday">일요일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>
    <string name="dot">・</string>
    <string name="email">아이디(이메일)</string>
    <string name="email_hint">이메일을 입력해 주세요</string>
    <string name="password_hint">8자리 이상 입력해 주세요.</string>
    <string name="arpayo_id">알파요 아이디</string>
    <string name="arpayo_id_hint">알파요 ID(이메일) 입력해 주세요.</string>
    <string name="signup_info1">아이디(이메일)는 비밀번호 찾기를 할 때 필요한 정보입니다.\n사용 가능한 이메일로 가입해 주세요.</string>
    <string name="signup_info2">알파요 앱 아이디를 연동해주시면 자동시급계산 앱 알파요를 사용\n중인 사장님들에게 추가 보상을 드립니다.</string>
    <string name="term1">이용약관 동의(필수)</string>
    <string name="term2">개인정보 취급방침 동의(필수)</string>
    <string name="term3">마케팅 활용 동의(선택)</string>
    <string name="check_id">중복체크</string>
    <string name="unable">사용불가</string>
    <string name="able">사용가능</string>
    <string name="link">연동</string>
    <string name="link_before">연동전</string>
    <string name="link_after">연동됨</string>
    <string name="link_fail">연동불가</string>
    <string name="mbr_info">회원정보</string>
    <string name="find_pwd_info1">회원 아이디(이메일)를 입력해 주세요.\n작성하신 아이디로 새로운 비밀번호가 전송됩니다.</string>
    <string name="find_pwd_info2">가입되지 않은 아이디는 이메일이 발송되지 않습니다.</string>
    <string name="send_pwd">새로운 비밀번호 전송</string>
    <string name="store_udt">정보수정</string>
    <string name="store_pay_info">결제정보</string>
    <string name="store_pay_date">다음결제일</string>
    <string name="store_pay_no">없음</string>
    <string name="store_list_info">운영중인 매장을 등록하여 이용하실 수 있습니다.\n복수의 매장을 운영중이시면 다수의 매장을 등록하실 수 있습니다.</string>
    <string name="store_name">매장명</string>
    <string name="store_name_hint">매장명을 입력해 주세요.</string>
    <string name="store_addr">매장 주소</string>
    <string name="store_addr_hint">우측 지도 검색을 눌러 주소를 입력해 주세요.</string>
    <string name="store_map">지도검색</string>
    <string name="map_hint">주소를 입력하세요.</string>
    <string name="store_addr_info">매장 주소를 토대로 주변 고객분들께 이벤트가 진행됩니다.\n매장 주소를 정확하게 입력해 주세요.</string>
    <string name="store_reg">매장등록</string>
    <string name="store_detail">세부정보</string>
    <string name="store_tel">매장 전화번호</string>
    <string name="store_sns">SNS 계정 정보</string>
    <string name="store_delivery_info">배달 정보</string>
    <string name="store_parking_info">주차 정보</string>
    <string name="store_tel_hint">예) 1688-2315</string>
    <string name="store_insta">인스타그램 계정</string>
    <string name="at"><![CDATA[@]]></string>
    <string name="store_insta_hint">계정을 입력해 주세요</string>
    <string name="store_delivery">배달 가능 여부</string>
    <string name="store_delivery_y">배달 가능</string>
    <string name="store_delivery_n">배달 없음</string>
    <string name="store_parking">주차 가능 여부</string>
    <string name="store_parking_y">주차 가능</string>
    <string name="store_parking_n">주차장 없음</string>
    <string name="store_parking_addr">주차장 주소</string>
    <string name="store_open_hours">영업시간</string>
    <string name="store_day_of_week">요일별</string>
    <string name="store_break">브레이크타임</string>
    <string name="store_holiday">휴일</string>
    <string name="store_same_hour">매일 동일한 영업시간</string>
    <string name="store_diff_hour">매일 다른 영업시간</string>
    <string name="store_same_break">매일 동일한 브레이크 타임</string>
    <string name="store_diff_break">매일 다른 브레이크 타임</string>
    <string name="store_same_holiday">매주 동일한 휴일</string>
    <string name="store_special_holiday">특별 휴일 입력</string>
    <string name="everyday">매일</string>
    <string name="everymonth">매월</string>
    <string name="special_holiday">특별휴일</string>
    <string name="store_time_info">새벽 6시 마감은 30:00으로 설정</string>
    <string name="store_time_set">영업시간 설정</string>
    <string name="store_break_set">브레이크타임 설정</string>
    <string name="store_holiday_set">휴일 설정</string>
    <string name="store_holiday_name">휴일 명칭</string>
    <string name="store_holiday_name_hint">명칭을 입력해 주세요.</string>
    <string name="store_holiday_set_info">‘월’을 입력하지 않으면 ‘매월’로 표시합니다.</string>
    <string name="store_img_exp">매장 사진/설명</string>
    <string name="store_img">대표사진</string>
    <string name="store_exp">매장설명</string>
    <string name="store_img_rep">매장 대표 사진</string>
    <string name="store_img_reg">등록 및 수정</string>
    <string name="store_img_reg_hint">[ 등록 및 수정 ] 버튼으로\n이미지를 등록해 주세요</string>
    <string name="store_exp_reg">매장 설명</string>
    <string name="store_exp_reg_hint">매장 설명을 입력해 주세요.\n(최대 100자)</string>
    <string name="store_img_info">매장을 대표할 이미지(음식 사진이나 매장 사진)와 설명을 작성해 주세요.\n단, 고객용 메뉴판 형태를 글자형으로 선택 시에만 보여집니다.</string>
    <string name="show_by_history">내역별 보기</string>
    <string name="show_by_history_sub">・주문 내역 확인 /결제</string>
    <string name="show_by_table">테이블별 보기</string>
    <string name="show_by_table_sub">・호출 내역 확인</string>
    <string name="menu_mgmt">메뉴 관리</string>
    <string name="event_mgmt">이벤트 관리</string>
    <string name="find_menu">메뉴판 찾기</string>
    <string name="order_info_sub">・주문 내역 확인\n・결제</string>
    <string name="call_mgmt_sub">・호출 내역 확인\n・호출 목록 관리</string>
    <string name="menu_mgmt_sub">・카테고리\n・메뉴, 가격, 사진, 설명</string>
    <string name="event_mgmt_sub">재방문 이벤트 관리</string>
    <string name="order_mgmt">주문정보</string>
    <string name="call_mgmt">직원호출</string>
    <string name="payment">결제</string>
    <string name="payment_title">결제방식 설정</string>
    <string name="payment_info">고객 결제(매출) 내역 : 나이스페이먼츠와 KICC 제공 서비스를 통해서 확인 가능\n※ 핀메뉴에서는 결제내역 확인을 제공하지 않습니다.</string>
    <string name="use_post_payment">후결제 사용</string>
    <string name="payment_usable_device">연결가능 기기 보기</string>
    <string name="payment_usable_reader">연결 가능 카드리더기</string>
    <string name="payment_status">상태 : %s</string>
    <string name="use_post_QR">QR코드 후결제 사용</string>
    <string name="use_post_QR_info">후결제는 핀메뉴 관리 앱에서 고객이 결제할 카드사를 선택 후\n포스(POS)처럼 사용할 수 있습니다.</string>
    <string name="use_post_card">카드 후결제 사용</string>
    <string name="use_post_card_info">후결제는 핀메뉴 관리 앱에서 KICC앱과 연동하여\n카드리더기를 통해 포스(POS)처럼 결제할 수 있습니다.</string>
    <string name="payment_title_set_nicepay">나이스페이먼츠 Key설정</string>
    <string name="payment_set_nicepay_info">QR코드 결제를 이용하시기 위해서는 나이스페이먼츠 Key설정이 필요합니다.</string>
    <string name="payment_set_nicepay_info2">MID와 Key를 정확하게 입력하지 않으면 결제가 원활하게 이루어지지 않을 수 있습니다.</string>
    <string name="mid">MID</string>
    <string name="mid_info">나이스페이먼츠 웹사이트 > 로그인 > 가맹점정보(상단) > Key관리(좌측)\n> MID 옆에 있는 ID 복사</string>
    <string name="mid_hint">PG상점 아이디(MID)를 입력해 주세요.</string>
    <string name="key">Key</string>
    <string name="key_info">나이스페이먼츠 > 로그인 > 가맹점정보(상단)\n> Key관리(좌측) > MID 아래 있는 긴 문장(key) 복사</string>
    <string name="key_hint">Key값을 입력해 주세요.</string>
    <string name="btn_set_nicepay">Key설정 저장</string>
    <string name="payment_title_pg_info">PG 카드 심사 정보</string>
    <string name="payment_set_pg_info">사업자등록증에 등록된 내용을 작성해 주세요.\n해당 내용은 PG 결제를 위한 카드사 심사에 사용되며 고객 주문 페이지 하단에 노출됩니다.</string>
    <string name="payment_set_pg_store_name">상호</string>
    <string name="payment_set_pg_store_name_hint">사업자등록증의 상호를 작성해 주세요.</string>
    <string name="payment_set_pg_store_addr">사업장주소</string>
    <string name="payment_set_pg_store_addr_hint">사업자등록증의 주소를 작성해 주세요.</string>
    <string name="payment_set_pg_store_tel">연락처</string>
    <string name="payment_set_pg_store_tel_hint">매장 전화번호를 작성해 주세요.</string>
    <string name="payment_set_pg_reg_number">사업자번호</string>
    <string name="payment_set_pg_reg_number_hint">사업자등록번호를 작성해 주세요.</string>
    <string name="payment_set_pg_owner_name">대표자명</string>
    <string name="payment_set_pg_owner_name_hint">사업자등록증의 대표자명을 작성해 주세요.</string>
    <string name="order_merge">주문항목 합치기</string>
    <string name="order_merge_info">해당 항목으로 선택된 주문 정보를 합칩니다.\n합쳐진 이후에는 복구가 불가능합니다.</string>
    <string name="merge">합치기</string>
    <string name="event_set_popup">주문완료 후 이벤트 설정</string>
    <string name="event_main_img">대표 이미지</string>
    <string name="event_main_img_hint">[ 등록 및 수정 ] 버튼으로\n이미지/사진을 등록해 주세요\n이미지 : 800×600권장, 최대 5MB\n이미지/사진 미등록 시 설명만 보여집니다.</string>
    <string name="event_reg_udt">등록 및 수정</string>
    <string name="event_exp">이벤트 설명</string>
    <string name="event_exp_hint">200자 이내로 등록해 주세요.\n예시) 네이버 영수증 리뷰 이벤트에 참여하시면 음료수를 무료로 드립니다.</string>
    <string name="event_link">이벤트 링크주소 등록</string>
    <string name="event_link_hint">연동주소 입력</string>
    <string name="event_link_info">링크주소를 입력하시면, [ 바로가기 ] 로 표시됩니다.\n단, QR오더에서만 링크주소가 활성화됩니다.</string>
    <string name="event_preview">미리보기</string>
    <string name="event_use">이벤트 사용</string>
    <string name="title_store_detail">매장 정보 : 세부정보</string>
</resources>