<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        style="@style/title"
        android:text="@string/payment_title_pg_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_title_back" />
    </LinearLayout>

    <TextView
        style="@style/text20"
        android:id="@+id/tv1"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/payment_set_pg_info"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/text18"
        android:text="@string/payment_set_pg_reg_number"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/etRegNum"
        app:layout_constraintTop_toTopOf="@+id/etRegNum"
        app:layout_constraintBottom_toBottomOf="@+id/etRegNum"/>

    <EditText
        style="@style/edittext_main"
        android:id="@+id/etRegNum"
        android:layout_marginTop="40dp"
        android:hint="@string/payment_set_pg_reg_number_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1"/>

    <TextView
        style="@style/text18"
        android:text="@string/payment_set_pg_store_name"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/etStoreName"
        app:layout_constraintTop_toTopOf="@+id/etStoreName"
        app:layout_constraintBottom_toBottomOf="@+id/etStoreName"/>

    <EditText
        style="@style/edittext_main"
        android:id="@+id/etStoreName"
        android:layout_marginTop="32dp"
        android:hint="@string/payment_set_pg_store_name_hint"
        app:layout_constraintTop_toBottomOf="@+id/etRegNum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/text18"
        android:text="@string/payment_set_pg_owner_name"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/etOwnerName"
        app:layout_constraintTop_toTopOf="@+id/etOwnerName"
        app:layout_constraintBottom_toBottomOf="@+id/etOwnerName"/>

    <EditText
        style="@style/edittext_main"
        android:id="@+id/etOwnerName"
        android:layout_marginTop="32dp"
        android:hint="@string/payment_set_pg_owner_name_hint"
        app:layout_constraintTop_toBottomOf="@+id/etStoreName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/text18"
        android:text="@string/payment_set_pg_store_tel"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/etStoreTel"
        app:layout_constraintTop_toTopOf="@+id/etStoreTel"
        app:layout_constraintBottom_toBottomOf="@+id/etStoreTel"/>

    <EditText
        style="@style/edittext_main"
        android:id="@+id/etStoreTel"
        android:layout_marginTop="32dp"
        android:hint="@string/payment_set_pg_store_tel_hint"
        app:layout_constraintTop_toBottomOf="@+id/etOwnerName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/text18"
        android:text="@string/payment_set_pg_store_addr"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/etStoreAddr"
        app:layout_constraintTop_toTopOf="@+id/etStoreAddr"
        app:layout_constraintBottom_toBottomOf="@+id/etStoreAddr"/>

    <EditText
        style="@style/edittext_main"
        android:id="@+id/etStoreAddr"
        android:layout_marginTop="32dp"
        android:hint="@string/payment_set_pg_store_addr_hint"
        app:layout_constraintTop_toBottomOf="@+id/etStoreTel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        style="@style/btn_main"
        android:id="@+id/save"
        android:text="@string/btn_save"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>