<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment.SetNicepayActivity">

    <TextView
        android:id="@+id/title"
        style="@style/title"
        android:text="@string/payment_title_set_nicepay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_title_back" />
    </LinearLayout>

    <TextView
        style="@style/text18"
        android:id="@+id/tv1"
        android:layout_marginTop="80dp"
        android:text="@string/payment_set_nicepay_info"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/text18"
        android:text="@string/mid"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/etMid"
        app:layout_constraintTop_toTopOf="@+id/etMid"
        app:layout_constraintBottom_toBottomOf="@+id/etMid"/>

    <EditText
        style="@style/edittext_main"
        android:id="@+id/etMid"
        android:layout_marginTop="60dp"
        android:hint="@string/mid_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1"/>

    <TextView
        style="@style/subtext"
        android:id="@+id/tv2"
        android:text="@string/mid_info"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/etMid"
        app:layout_constraintTop_toBottomOf="@+id/etMid"/>

    <TextView
        style="@style/text18"
        android:text="@string/key"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/etKey"
        app:layout_constraintTop_toTopOf="@+id/etKey"
        app:layout_constraintBottom_toBottomOf="@+id/etKey"/>

    <EditText
        style="@style/edittext_main"
        android:id="@+id/etKey"
        android:layout_marginTop="40dp"
        android:inputType="textPassword"
        android:hint="@string/key_hint"
        app:layout_constraintTop_toBottomOf="@+id/tv2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/subtext"
        android:id="@+id/tv3"
        android:layout_marginTop="20dp"
        android:text="@string/key_info"
        app:layout_constraintStart_toStartOf="@+id/etKey"
        app:layout_constraintTop_toBottomOf="@+id/etKey"/>

    <TextView
        style="@style/subtext"
        android:id="@+id/tv4"
        android:text="@string/payment_set_nicepay_info2"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv3"
        app:layout_constraintStart_toStartOf="@+id/tv3"/>

    <TextView
        style="@style/btn_grd"
        android:id="@+id/save"
        android:layout_width="500dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_set_nicepay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv4"/>

</androidx.constraintlayout.widget.ConstraintLayout>