<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".event.SetEventPopup">

    <TextView
        style="@style/title"
        android:id="@+id/title"
        android:text="@string/event_set_popup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:id="@+id/back"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_title_back" />
    </LinearLayout>

    <TextView
        style="@style/text20"
        android:id="@+id/tvImg"
        android:layout_marginTop="50dp"
        android:text="@string/event_main_img"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/img_default"/>

    <TextView
        android:id="@+id/img_default"
        android:layout_width="440dp"
        android:layout_height="330dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/event_main_img_hint"
        android:textSize="20sp"
        android:textColor="@color/hint"
        android:background="@drawable/bg_edittext"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@+id/img"
        app:layout_constraintStart_toStartOf="@+id/img"/>

    <ImageView
        android:id="@+id/img"
        android:layout_width="440dp"
        android:layout_height="330dp"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/tvImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/exp"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        style="@style/btn_sub"
        android:id="@+id/btnSetImg"
        android:layout_width="440dp"
        android:layout_marginTop="20dp"
        android:text="@string/event_reg_udt"
        app:layout_constraintStart_toStartOf="@id/img"
        app:layout_constraintEnd_toEndOf="@id/img"
        app:layout_constraintTop_toBottomOf="@+id/img"/>
    
    <TextView
        style="@style/text20"
        android:id="@+id/tvExp"
        android:layout_marginTop="50dp"
        android:text="@string/event_exp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/exp"/>
    
    <EditText
        style="@style/edittext_main"
        android:id="@+id/exp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:hint="@string/event_exp_hint"
        app:layout_constraintStart_toEndOf="@+id/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExp"/>
    
    <TextView
        style="@style/text20"
        android:id="@+id/tvLink"
        android:layout_marginTop="40dp"
        android:text="@string/event_link"
        app:layout_constraintTop_toBottomOf="@+id/exp"
        app:layout_constraintStart_toStartOf="@+id/link"/>

    <EditText
        style="@style/edittext_main"
        android:id="@+id/link"
        android:layout_marginTop="10dp"
        android:hint="@string/event_link_hint"
        app:layout_constraintStart_toStartOf="@+id/exp"
        app:layout_constraintTop_toBottomOf="@+id/tvLink"/>

    <TextView
        style="@style/subtext"
        android:text="@string/event_link_info"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="@+id/link"
        app:layout_constraintTop_toBottomOf="@+id/link"/>

    <TextView
        style="@style/btn_sub"
        android:id="@+id/preview"
        android:layout_width="500dp"
        android:text="@string/event_preview"
        app:layout_constraintStart_toStartOf="@id/link"
        app:layout_constraintBottom_toBottomOf="@+id/btnSetImg"/>

    <TextView
        style="@style/text24"
        android:id="@+id/tvUse"
        android:text="@string/event_use"
        android:layout_marginEnd="10dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@+id/useEvent"
        app:layout_constraintBottom_toBottomOf="@+id/useEvent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/useEvent"/>

    <CheckBox
        style="@style/toggle"
        android:id="@+id/useEvent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/preview"
        app:layout_constraintStart_toEndOf="@+id/tvUse"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        style="@style/btn_main"
        android:id="@+id/save"
        android:layout_marginBottom="80dp"
        android:text="@string/btn_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>