<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="560dp"
        android:layout_height="wrap_content"
        android:paddingVertical="40dp"
        android:paddingHorizontal="30dp"
        android:background="@drawable/bg_r11w"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            style="@style/text22b"
            android:id="@+id/title"
            android:text="@string/order_merge"/>

        <TextView
            style="@style/text18"
            android:id="@+id/content"
            android:layout_marginVertical="33dp"
            android:text="@string/order_merge_info"
            android:gravity="center"/>
        
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/cancel"/>
            <TextView
                style="@style/btn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:text="@string/merge"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>